Wed Aug 17 00:05:46 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_add_method): preserve safe level in the environment
	  where a method is defined .

	* eval.c (rb_call0): restore preserved safe level in the method
	  execution. 

	* parse.y (lambda): need separate block variable stack
	  manipulation and lpar_beg maintenance.  based on a patch found
	  in [ruby-core:05551] from Mauricio Fernandez <mfp@acm.org>.

	* parse.y (parser_yylex): adjust lpar_beg after tLAMBEG and
	  kDO_LAMBDA. [ruby-core:05551]

Mon Aug 15 07:24:38 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* intern.h (rb_check_to_integer): add declaration.

	* object.c (rb_to_integer, rb_check_to_integer): argument constified.

Mon Aug 15 00:38:51 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_rescue2): reduce PUSH_TAG() as well as NODE_RESCUE.
	  [ruby-dev:26800]

	* range.c (range_check, range_init): reduce uselse exceptions.

Mon Aug 15 00:34:11 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (yycompile): remove unreachable code.  [yarv-dev:570]

Sat Aug 13 22:16:12 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (remove_entry_secure): forgot final chdir.

Sat Aug 13 22:07:49 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (remove_entry_secure): uses chdir(2) and check
	  if current directory is correct. [ruby-dev:26100] [ruby-dev:26226]

Sat Aug 13 21:11:05 2005  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add WIN32OLE_VARIANT class.

	* ext/win32ole/tests/testall.rb: ditto.

	* ext/win32ole/tests/testOLEVARIANT.rb: ditto.

Sat Aug 13 18:51:26 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_block_pass): distinguish current block from others.
	  fixed: [ruby-dev:26274]

	* ext/stringio/stringio.c (strio_set_string): disallow nil.
	  http://www.rubyist.net/~nobu/t/20050811.html#c05

Sat Aug 13 08:01:59 2005  NARUSE, Yui  <naruse@ruby-lang.org>
